[package]
name = "golrs"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "Game of life using webgpu"
readme = "Readme.md"
homepage = "https://github.com/pythops/golrs"
repository = "https://github.com/pythops/golrs"


[dependencies]
bytemuck = { version = "1.13", features = ["derive"] }
clap = { version = "4", features = ["derive", "cargo"] }
env_logger = { version = "0.10" }
log = { version = "0.4" }
pollster = { version = "0.3" }
wgpu = { version = "0.18" }
winit = { version = "0.29", features = ["rwh_05"] }
rand = { version = "0.8" }
